Refactor CGridCell and remove CGridCellStatus - consolidate functionality
Co-authored-by: yalovali <234063+yalovali@users.noreply.github.com>